feat(logic): added new business logic for handle cache